<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@id/newMat"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/matiere"/>

        <EditText
            android:id="@id/newScore"
            android:layout_width="200dp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:hint="@string/new_score"/>

        <Button
            android:id="@id/addNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
            android:onClick="ClickHandler"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>