<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bground">
    <Button
        android:id="@id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="ClickHandler"/>

    <ImageView
    android:id="@id/imgProfile"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:src="@mipmap/ic_launcher"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/sym_action_call"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/imgProfile"
        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
        android:onClick="ClickHandler"/>


    <TextView
        android:id="@id/labelNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/txtNom"
        android:textSize="30sp" />

    <EditText
        android:id="@id/txtNom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelNom"
        app:layout_constraintEnd_toStartOf="@id/imgProfile"/>

    <TextView
        android:id="@id/labelPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelNom"
        app:layout_constraintBaseline_toBaselineOf="@id/txtPrenom"
        android:textSize="30sp" />

    <EditText
        android:id="@id/txtPrenom"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtNom"
        app:layout_constraintStart_toEndOf="@id/labelNom"
        app:layout_constraintEnd_toStartOf="@id/imgProfile"/>

    <TextView
        android:id="@id/labelClasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelPrenom"
        app:layout_constraintBaseline_toBaselineOf="@id/txtClasse"
        android:textSize="30sp" />

    <EditText
        android:id="@id/txtClasse"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPrenom"
        app:layout_constraintStart_toEndOf="@id/labelClasse"
        app:layout_constraintEnd_toStartOf="@id/imgProfile"/>

    <TextView
        android:id="@id/labelRemarque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtClasse"
        android:textSize="30sp" />

    <EditText
        android:id="@id/txtRemarque"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/labelRemarque"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        android:gravity="top"/>

</androidx.constraintlayout.widget.ConstraintLayout>